<resources>
    <string name="app_name">DB2Mobile</string>
    <string name="homepage">Homepage</string>
    <string name="parentRegister">Parent Register</string>
    <string name="studentRegister">Student Register</string>
    <string name="parentSignIn">Parent Sign In</string>
    <string name="studentSignIn">Student Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="parentEmail">Parent\'s Email</string>
    <string-array name="grade">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="role">
        <item>None</item>
        <item>Mentor</item>
        <item>Mentee</item>
        <item>Both</item>
    </string-array>
    <string name="updateParentInfo">Update Parent Info</string>
    <string name="updateStudentInfo">Update Student Info</string>
    <string name="logout">Logout</string>
    <string name="oldStudentEmail">Old Student Email</string>
    <string name="newStudentEmail">New Student Email</string>
    <string name="oldStudentPassword">Old Student Password</string>
    <string name="newStudentPassword">New Student Password</string>
    <string name="newStudentName">New Student Name</string>
    <string name="newStudentPhone">New Student Phone</string>
    <string name="newStudentGrade">New Student Grade</string>
    <string name="viewSections">View Sections</string>
    <string name="enroll">Enroll</string>
    <string name="teach">Teach</string>
    <string name="viewMentor">View Mentor</string>
    <string name="viewMentee">View Mentee</string>
</resources>
